--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,10 @@ name: python-M2TTD-environment
 channels:
   - conda-forge
 dependencies:
+  - beautifulsoup4
   - lxml
+  - nltk
+  - pandas
   - pip
   - pip:
     - googletrans==4.0.0rc1
