--- a/environment.yml
+++ b/environment.yml
@@ -6,9 +6,14 @@ dependencies:
   - jupyterlab=3.4
   - jupyterlab-latex=3.1
   - lxml
+  - matplotlib
   - nltk=3.6
+  - numpy
   - pandas=1.4
   - python=3.10
+  - scikit-learn
+  - scipy
+  - seaborn
   - pip
   - pip:
     - googletrans==4.0.0rc1
