--- a/environment.yml
+++ b/environment.yml
@@ -2,18 +2,18 @@ name: python-M2TTD-environment
 channels:
   - conda-forge
 dependencies:
-  - beautifulsoup4=4.11
-  - jupyterlab=3.4
-  - jupyterlab-latex=3.1
+  - beautifulsoup4=4.12
+  - jupyterlab=4.2.5
+  - jupyterlab-latex=4.0
   - lxml
-  - matplotlib
-  - nltk=3.6
-  - numpy
+  - matplotlib=3.7
+  - nltk=3.8
+  - numpy=1.25
   - pandas=1.4
-  - python=3.10
-  - scikit-learn
-  - scipy
-  - seaborn
+  - python=3.11
+  - scikit-learn=1.3
+  - scipy=1.11
+  - seaborn=0.12
   - pip
   - pip:
     - googletrans==4.0.0rc1
