--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
   - matplotlib=3.7
   - nltk=3.8
   - numpy=1.25
-  - pandas=1.4
+  - pandas
   - python=3.11
   - scikit-learn=1.3
   - scipy=1.11
