--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,6 @@ dependencies:
   - beautifulsoup4=4.12
   - jupyterlab=4.2.5
   - jupyterlab-latex=4.0
-  - matplotlib=3.7
-  - numpy=2.1
-  - python=3.13
+  - matplotlib
+  - numpy
+  - python=3.11
